--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -384,7 +384,7 @@
 							<table style="font-size: 12px;">
 								<thead>
 								<tr>
-									<th style="width: 33%; text-align: center; background-color: #0D253C; color: white;">DINERS</th>
+									<th style="width: 33%; text-align: center; background-color: #0066A8; color: white;">DINERS</th>
 									<th style="width: 33%; text-align: center; background-color: #404040; color: white;">INTERDIN</th>
 									<th style="width: 33%; text-align: center; background-color: #E66929; color: white;">DISCOVER</th>
 								</tr>
@@ -497,7 +497,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #0D253C; color: white;"><strong>SALDOS FACTURADOS</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #0066A8; color: white;"><strong>SALDOS FACTURADOS</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 60%;"><strong>SALDO A 90 Y MAS 90 DÍAS</strong></td>
@@ -546,7 +546,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="4" style="text-align: center; background-color: #0D253C; color: white;"><strong>PAGOS</strong></td>
+												<td colspan="4" style="text-align: center; background-color: #0066A8; color: white;"><strong>PAGOS</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 40%;"><strong>ABONO EFECTIVO DEL SISTEMA</strong></td>
@@ -574,7 +574,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #0D253C; color: white;"><strong>SALDOS FACTURADOS DESPUÉS DE ABONO</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #0066A8; color: white;"><strong>SALDOS FACTURADOS DESPUÉS DE ABONO</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 60%;"><strong>SALDO A 90 Y MAS 90 DIAS</strong></td>
@@ -598,7 +598,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="4" style="text-align: center; background-color: #0D253C; color: white;"><strong>VALORES POR FACTURAR</strong></td>
+												<td colspan="4" style="text-align: center; background-color: #0066A8; color: white;"><strong>VALORES POR FACTURAR</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 35%;"><strong>INTERESES POR FACTURAR</strong></td>
@@ -641,7 +641,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #0D253C; color: white;"><strong>FINANCIAMIENTO</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #0066A8; color: white;"><strong>FINANCIAMIENTO</strong></td>
 											</tr>
 											</tbody>
 										</table>
@@ -649,8 +649,8 @@
 										<table>
 											<tbody>
 											<tr>
-												<td style="width: 50%; text-align: center; background-color: #0D253C; color: white;"><strong>TIPO DE FINANCIAMIENTO</strong></td>
-												<td style="width: 50%; text-align: center; background-color: #0D253C; color: white;"><strong>NOVACION</strong></td>
+												<td style="width: 50%; text-align: center; background-color: #0066A8; color: white;"><strong>TIPO DE FINANCIAMIENTO</strong></td>
+												<td style="width: 50%; text-align: center; background-color: #0066A8; color: white;"><strong>NOVACION</strong></td>
 											</tr>
 											<tr>
 												<td><strong>TOTAL</strong></td>
@@ -695,19 +695,19 @@
 													<input type="text" class="form-control form-control-sm" v-on:change="calcularValoresDiners" v-model="aplicativo_diners_tarjeta_diners.numero_meses_gracia" placeholder="NÚMERO DE MESES DE GRACIA" v-autoname/>
 												</td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #0066A8; color: white;">
 												<td><strong>VALOR A FINANCIAR</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_diners.valor_financiar"></span></td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #0066A8; color: white;">
 												<td><strong>TOTAL INTERESES</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_diners.total_intereses"></span></td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #0066A8; color: white;">
 												<td><strong>TOTAL FINANCIAMIENTO</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_diners.total_financiamiento_total"></span></td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #0066A8; color: white;">
 												<td><strong>VALOR CUOTA MENSUAL</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_diners.valor_cuota_mensual"></span></td>
 											</tr>
@@ -843,7 +843,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #0D253C; color: white;"><strong>SALDOS FACTURADOS</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #404040; color: white;"><strong>SALDOS FACTURADOS</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 60%;"><strong>SALDO A 90 Y MAS 90 DÍAS</strong></td>
@@ -892,7 +892,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="4" style="text-align: center; background-color: #0D253C; color: white;"><strong>PAGOS</strong></td>
+												<td colspan="4" style="text-align: center; background-color: #404040; color: white;"><strong>PAGOS</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 40%;"><strong>ABONO EFECTIVO DEL SISTEMA</strong></td>
@@ -920,7 +920,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #0D253C; color: white;"><strong>SALDOS FACTURADOS DESPUÉS DE ABONO</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #404040; color: white;"><strong>SALDOS FACTURADOS DESPUÉS DE ABONO</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 60%;"><strong>SALDO A 90 Y MAS 90 DIAS</strong></td>
@@ -944,7 +944,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="4" style="text-align: center; background-color: #0D253C; color: white;"><strong>VALORES POR FACTURAR</strong></td>
+												<td colspan="4" style="text-align: center; background-color: #404040; color: white;"><strong>VALORES POR FACTURAR</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 35%;"><strong>INTERESES POR FACTURAR</strong></td>
@@ -987,7 +987,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #0D253C; color: white;"><strong>FINANCIAMIENTO</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #404040; color: white;"><strong>FINANCIAMIENTO</strong></td>
 											</tr>
 											</tbody>
 										</table>
@@ -995,8 +995,8 @@
 										<table>
 											<tbody>
 											<tr>
-												<td style="width: 50%; text-align: center; background-color: #0D253C; color: white;"><strong>TIPO DE FINANCIAMIENTO</strong></td>
-												<td style="width: 50%; text-align: center; background-color: #0D253C; color: white;"><strong>NOVACION</strong></td>
+												<td style="width: 50%; text-align: center; background-color: #404040; color: white;"><strong>TIPO DE FINANCIAMIENTO</strong></td>
+												<td style="width: 50%; text-align: center; background-color: #404040; color: white;"><strong>NOVACION</strong></td>
 											</tr>
 											<tr>
 												<td><strong>TOTAL</strong></td>
@@ -1041,19 +1041,19 @@
 													<input type="text" class="form-control form-control-sm" v-on:change="calcularValoresInterdin" v-model="aplicativo_diners_tarjeta_interdin.numero_meses_gracia" placeholder="NÚMERO DE MESES DE GRACIA" v-autoname/>
 												</td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #404040; color: white;">
 												<td><strong>VALOR A FINANCIAR</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_interdin.valor_financiar"></span></td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #404040; color: white;">
 												<td><strong>TOTAL INTERESES</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_interdin.total_intereses"></span></td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #404040; color: white;">
 												<td><strong>TOTAL FINANCIAMIENTO</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_interdin.total_financiamiento_total"></span></td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #404040; color: white;">
 												<td><strong>VALOR CUOTA MENSUAL</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_interdin.valor_cuota_mensual"></span></td>
 											</tr>
@@ -1189,7 +1189,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #0D253C; color: white;"><strong>SALDOS FACTURADOS</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #E66929; color: white;"><strong>SALDOS FACTURADOS</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 60%;"><strong>SALDO A 90 Y MAS 90 DÍAS</strong></td>
@@ -1238,7 +1238,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="4" style="text-align: center; background-color: #0D253C; color: white;"><strong>PAGOS</strong></td>
+												<td colspan="4" style="text-align: center; background-color: #E66929; color: white;"><strong>PAGOS</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 40%;"><strong>ABONO EFECTIVO DEL SISTEMA</strong></td>
@@ -1266,7 +1266,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #0D253C; color: white;"><strong>SALDOS FACTURADOS DESPUÉS DE ABONO</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #E66929; color: white;"><strong>SALDOS FACTURADOS DESPUÉS DE ABONO</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 60%;"><strong>SALDO A 90 Y MAS 90 DIAS</strong></td>
@@ -1290,7 +1290,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="4" style="text-align: center; background-color: #0D253C; color: white;"><strong>VALORES POR FACTURAR</strong></td>
+												<td colspan="4" style="text-align: center; background-color: #E66929; color: white;"><strong>VALORES POR FACTURAR</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 35%;"><strong>INTERESES POR FACTURAR</strong></td>
@@ -1333,7 +1333,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #0D253C; color: white;"><strong>FINANCIAMIENTO</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #E66929; color: white;"><strong>FINANCIAMIENTO</strong></td>
 											</tr>
 											</tbody>
 										</table>
@@ -1341,8 +1341,8 @@
 										<table>
 											<tbody>
 											<tr>
-												<td style="width: 50%; text-align: center; background-color: #0D253C; color: white;"><strong>TIPO DE FINANCIAMIENTO</strong></td>
-												<td style="width: 50%; text-align: center; background-color: #0D253C; color: white;"><strong>NOVACION</strong></td>
+												<td style="width: 50%; text-align: center; background-color: #E66929; color: white;"><strong>TIPO DE FINANCIAMIENTO</strong></td>
+												<td style="width: 50%; text-align: center; background-color: #E66929; color: white;"><strong>NOVACION</strong></td>
 											</tr>
 											<tr>
 												<td><strong>TOTAL</strong></td>
@@ -1387,19 +1387,19 @@
 													<input type="text" class="form-control form-control-sm" v-on:change="calcularValoresDiscover" v-model="aplicativo_diners_tarjeta_discover.numero_meses_gracia" placeholder="NÚMERO DE MESES DE GRACIA" v-autoname/>
 												</td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #E66929; color: white;">
 												<td><strong>VALOR A FINANCIAR</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_discover.valor_financiar"></span></td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #E66929; color: white;">
 												<td><strong>TOTAL INTERESES</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_discover.total_intereses"></span></td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #E66929; color: white;">
 												<td><strong>TOTAL FINANCIAMIENTO</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_discover.total_financiamiento_total"></span></td>
 											</tr>
-											<tr style="background-color: #0D253C; color: white;">
+											<tr style="background-color: #E66929; color: white;">
 												<td><strong>VALOR CUOTA MENSUAL</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_discover.valor_cuota_mensual"></span></td>
 											</tr>
