--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -391,7 +391,7 @@
 								</thead>
 								<tbody>
 								<tr>
-									<td>
+									<td style="vertical-align: top;">
 										<table>
 											<tbody>
 											<tr>
@@ -737,7 +737,7 @@
 											</tbody>
 										</table>
 									</td>
-									<td>
+									<td style="vertical-align: top;">
 										<table>
 											<tbody>
 											<tr>
@@ -1083,7 +1083,7 @@
 											</tbody>
 										</table>
 									</td>
-									<td>
+									<td style="vertical-align: top;">
 										<table>
 											<tbody>
 											<tr>
