--- a/views/cliente/index.twig
+++ b/views/cliente/index.twig
@@ -9,30 +9,38 @@
 			<div class="card-body">
 				<form method="post" id="filtro" class="form-horizontal">
 					<div class=" row mb-4">
-						<label for="inputName" class="col-md-2 form-label">Apellidos</label>
+						<label for="inputName" class="col-md-2 form-label">Institución</label>
 						<div class="col-md-4">
-							<input type="text" class="form-control" v-model="model.apellidos" placeholder="Apellidos"/>
+							<input type="text" class="form-control" v-model="model.institucion" name="institucion" placeholder="Institución"/>
 						</div>
 
-						<label for="inputName" class="col-md-2 form-label">Nombres</label>
+						<label for="inputName" class="col-md-2 form-label">Cédula</label>
 						<div class="col-md-4">
-							<input type="text" class="form-control" v-model="model.nombres" placeholder="Nombres"/>
+							<input type="text" class="form-control" v-model="model.cedula" name="cedula" placeholder="Cédula"/>
 						</div>
 					</div>
 
 					<div class=" row mb-4">
-						<label for="inputName" class="col-md-2 form-label">Cédula</label>
+						<label for="inputName" class="col-md-2 form-label">Apellidos</label>
 						<div class="col-md-4">
-							<input type="text" class="form-control" v-model="model.cedula" placeholder="Cédula"/>
+							<input type="text" class="form-control" v-model="model.apellidos" name="apellidos" placeholder="Apellidos"/>
 						</div>
 
-						<label for="inputName" class="col-md-2 form-label">Sexo</label>
+						<label for="inputName" class="col-md-2 form-label">Nombres</label>
 						<div class="col-md-4">
-							<select class="form-control form-select select2" v-model="model.sexo" placeholder="Seleccione una opción">
-								<option value=""></option>
-								<option value="masculino">MASCULINO</option>
-								<option value="femenino">FEMENINO</option>
-							</select>
+							<input type="text" class="form-control" v-model="model.nombres" name="nombres" placeholder="Nombres"/>
+						</div>
+					</div>
+
+					<div class=" row mb-4">
+						<label for="inputName" class="col-md-2 form-label">Producto</label>
+						<div class="col-md-4">
+							<input type="text" class="form-control" v-model="model.producto" name="producto" placeholder="Producto"/>
+						</div>
+
+						<label for="inputName" class="col-md-2 form-label">Teléfono</label>
+						<div class="col-md-4">
+							<input type="text" class="form-control" v-model="model.telefono" name="telefono" placeholder="Teléfono"/>
 						</div>
 					</div>
 
