--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -46,10 +46,10 @@
 									<thead>
 									<tr>
 										<th>Número Oro</th>
-										<th>Teléfono</th>
 										<th>Tipo</th>
+										<th>Descripción</th>
+										<th>Teléfono</th>
 										<th>Origen</th>
-										<th>Fecha Ingreso</th>
 									</tr>
 									</thead>
 									<tbody>
@@ -61,54 +61,87 @@
 											</label>
 										</td>
 										<td>
-											<div class="input-group">
-												<input type="text" class="form-control form-control-sm required digits" v-model="t.telefono" placeholder="Teléfono" v-autoname/>
-												<button type="button" class="btn btn-icon btn-info btn-sm" v-on:click="delTelefono(t)">
-													<i class="fa fa-phone" aria-hidden="true"></i>
-												</button>
-											</div>
+											<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="t.tipo">
 										</td>
 										<td>
-											<select class="form-control form-control-sm form-select select2" v-autoname v-model="t.tipo" placeholder="Seleccione una opción" v-autoname>
-												<option value="titular">TITULAR</option>
-												<option value="familiar">FAMILIAR</option>
-												<option value="amigo">AMIGO</option>
-												<option value="otros">OTROS</option>
-											</select>
+											<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="t.descripcion">
 										</td>
-										<td style="text-transform: uppercase;"><span v-html="t.origen"></span></td>
-										<td><span v-html="t.fecha_ingreso"></span></td>
+										<td>
+											<div class="input-group">
+												<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="t.telefono">
+											</div>
+										</td>
+										<td style="text-transform: uppercase;">
+											<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="t.origen">
+										</td>
 									</tr>
 									</tbody>
 								</table>
 							</div>
+						</div>
 
-							<label for="inputName" class="col-md-2 form-label">Emails</label>
+						<div class=" row mb-4">
+							<label for="inputName" class="col-md-2 form-label">Direcciones</label>
 							<div class="col-md-10">
 								<table class="table border text-nowrap text-md-nowrap table-bordered table-sm mb-0">
 									<thead>
 									<tr>
-										<th>Email</th>
 										<th>Tipo</th>
-										<th>Origen</th>
-										<th>Fecha Ingreso</th>
+										<th>Ciudad</th>
+										<th>Dirección</th>
 									</tr>
 									</thead>
 									<tbody>
-									<tr v-for="c in email">
+									<tr v-for="d in direccion">
 										<td>
-											<input type="text" class="form-control form-control-sm required email" v-model="c.email" placeholder="Email" v-autoname/>
+											<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="d.tipo">
 										</td>
 										<td>
-											<select class="form-control form-select select2" v-autoname v-model="c.tipo" placeholder="Seleccione una opción" v-autoname>
-												<option value="titular">TITULAR</option>
-												<option value="familiar">FAMILIAR</option>
-												<option value="amigo">AMIGO</option>
-												<option value="otros">OTROS</option>
-											</select>
+											<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="d.ciudad">
 										</td>
-										<td style="text-transform: uppercase;"><span v-html="c.origen"></span></td>
-										<td><span v-html="c.fecha_ingreso"></span></td>
+										<td>
+											<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="d.direccion">
+										</td>
+									</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+
+						<div class=" row mb-4">
+							<label for="inputName" class="col-md-2 form-label">Referencias</label>
+							<div class="col-md-10">
+								<table class="table border text-nowrap text-md-nowrap table-bordered table-sm mb-0">
+									<thead>
+									<tr>
+										<th>Tipo</th>
+										<th>Descripción</th>
+										<th>Nombre</th>
+										<th>Teléfono</th>
+										<th>Ciudad</th>
+										<th>Dirección</th>
+									</tr>
+									</thead>
+									<tbody>
+									<tr v-for="r in referencia">
+										<td>
+											<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="r.tipo">
+										</td>
+										<td>
+											<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="r.descripcion">
+										</td>
+										<td>
+											<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="r.nombre">
+										</td>
+										<td>
+											<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="r.telefono">
+										</td>
+										<td>
+											<input type="text" style="text-transform: uppercase;" readonly class="form-control-plaintext" v-model="r.ciudad">
+										</td>
+										<td>
+											<textarea rows="3" v-model="r.direccion" class="form-control-plaintext" readonly placeholder="Dirección" v-autoname></textarea>
+										</td>
 									</tr>
 									</tbody>
 								</table>
@@ -132,7 +165,7 @@
 				</div>
 				<div class="card-body">
 					<div class=" row mb-4">
-						<label for="inputName" class="col-md-2 form-label">Producto</label>
+						<label for="inputName" class="col-md-2 form-label">Producto adquirido </label>
 						<div class="col-md-4">
 							<input type="text" readonly class="form-control-plaintext" v-model="model.producto">
 						</div>
@@ -224,6 +257,57 @@
 						<label for="inputName" class="col-md-2 form-label">Valor cobrar</label>
 						<div class="col-md-4">
 							<input type="text" readonly class="form-control-plaintext" v-model="model.valor_cobrar">
+						</div>
+					</div>
+
+					<div class=" row mb-4">
+						<label for="inputName" class="col-md-2 form-label">Abono/pago</label>
+						<div class="col-md-4">
+							<input type="text" readonly class="form-control-plaintext" v-model="model.abono">
+						</div>
+					</div>
+
+					<div class=" row mb-4">
+						<label for="inputName" class="col-md-2 form-label">Nombre Garante</label>
+						<div class="col-md-4">
+							<input type="text" readonly class="form-control-plaintext" v-model="model.nombre_garante">
+						</div>
+
+						<label for="inputName" class="col-md-2 form-label">Cédula Garante</label>
+						<div class="col-md-4">
+							<input type="text" readonly class="form-control-plaintext" v-model="model.cedula_garante">
+						</div>
+					</div>
+
+					<div class=" row mb-4">
+						<label for="inputName" class="col-md-2 form-label">PAGOS</label>
+						<div class="col-md-10">
+							<table class="table border text-nowrap text-md-nowrap table-bordered table-sm mb-0">
+								<thead>
+								<tr>
+									<th>Número de cuota</th>
+									<th>Pago Total</th>
+									<th>Fecha de pago</th>
+									<th>Fecha de vencimiento</th>
+								</tr>
+								</thead>
+								<tbody>
+								<tr v-for="p in pagos">
+									<td>
+
+									</td>
+									<td>
+
+									</td>
+									<td>
+
+									</td>
+									<td style="text-transform: uppercase;">
+
+									</td>
+								</tr>
+								</tbody>
+							</table>
 						</div>
 					</div>
 				</div>
@@ -1483,8 +1567,10 @@
 				cat: {{ catalogos|raw }},
 				model: {{ model|raw }},
 				telefono: {{ telefono|raw }},
-				email: {{ email|raw }},
+				direccion: {{ direccion|raw }},
+				referencia: {{ referencia|raw }},
 				cliente: {{ cliente|raw }},
+				pagos: {{ pagos|raw }},
 				aplicativo_diners: {{ aplicativo_diners|raw }},
 				aplicativo_diners_tarjeta_diners: {{ aplicativo_diners_tarjeta_diners|raw }},
 				aplicativo_diners_tarjeta_discover: {{ aplicativo_diners_tarjeta_discover|raw }},
