--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -435,7 +435,7 @@
 							<input type="text" readonly class="form-control-plaintext" v-model="aplicativo_diners.ciudad_cuenta">
 						</div>
 
-						<label for="inputName" class="col-md-2 form-label">CIUDAD DE LA CUENTA</label>
+						<label for="inputName" class="col-md-2 form-label">ZONA DE LA CUENTA</label>
 						<div class="col-md-4">
 							<input type="text" readonly class="form-control-plaintext" v-model="aplicativo_diners.zona_cuenta">
 						</div>
