--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -443,7 +443,7 @@
 
 					<div class=" row mb-4">
 						<div class="table-responsive">
-							<table style="font-size: 11px;">
+							<table class="table border text-nowrap text-md-nowrap table-bordered table-sm mb-0 font-size: 10px;">
 								<thead>
 								<tr>
 									<th style="width: 25%; text-align: center; background-color: #0066A8; color: white;">DINERS</th>
